fix bugs of booking_choose_movie when running on mobile phone

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
 	display:table;
 	width: 100%;
 	height: 8.69%;
-	position:absolute;
+	position:fixed;
 	background: #e21b74;
 	background: -webkit-gradient(linear, 0 0, 0 bottom, from(#e21b74), to(#891846));
 	background: -webkit-linear-gradient(#e21b74, #891846);
@@ -31,6 +31,7 @@ body{
 	background: linear-gradient(#e21b74, #891846);
 	-pie-background: linear-gradient(#e21b74, #891846);
 	behavior: url(/pie/PIE.htc);
+    z-index:1;
 }
 .header-text{
 	display:table-cell;
@@ -39,7 +40,6 @@ body{
 }
 /* Page ------------------------------------------------------------*/
 #page {
-	overflow: hidden;
 	width:100%;
 	height:100%;
 }
@@ -49,7 +49,7 @@ body{
 #nav-bar {
 	width: 100%;
 	height:8.69%;
-	position:absolute; 
+	position:fixed;
 	bottom: 0;
 }
 .ui-menu {
@@ -68,6 +68,7 @@ body{
 	text-align: center;
 	vertical-align: middle;
 	position: relative;
+    padding:0px;
 }
 .ui-menu-active {
 	width: 25%;
@@ -85,6 +86,7 @@ body{
 	vertical-align: middle;
 	text-align: center;
 	position: relative;
+    padding:0px;
 }
 .menu-img{
 	position:absolute;
@@ -201,11 +203,10 @@ body{
 	background-image: url("../images/empty_bg_836.png");
 	background-repeat:no-repeat; 
 	width: 100%;
-	height: 82.64%;
 	background-size:100% 100%;
 	top:8.69%;
 	position:absolute;
-    overflow:auto;
+    padding:0px
 }
 .choose-movie{
 	width: 49%;
